# MADS-EMDM-Exam1

./: .pre-commit-config.yaml  README.md  exam1.ipynb  pyproject.toml  requirements.txt
data/: res_1.parquet  res_2.parquet
helper_scripts/: data_display.py  data_manipulation.py
