[tool.poetry]
name = "EMDM01"
version = "1.0"
description = ""
authors = ["Janosch Hoefer"]

[tool.poetry.scripts]
main = "src.exercises.main:main"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandas = "^1.5.0"
numpy = "^1.23.3"
scipy = "^1.9.1"
mlxtend = "^0.21.0"
tqdm = "^4.64.1"
ipykernel = "^6.15.3"
ipywidgets = "^8.0.2"
matplotlib = "^3.6.1"
scikit-learn = "^1.1.2"
seaborn = "^0.12.0"
pyarrow = "^9.0.0"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^3.0.0"
black = "^22.1.0"
flake8 = "^4.0.1"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.1.13"]
build-backend = "poetry.core.masonry.api"
